samples/_failures_safe/1761598822_af4200_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_adc2eea8.c: In function ‘main’:
./samples/SAFE/__tmp_adc2eea8.c:167:13: error: expected declaration or statement at end of input
  167 |             default:
      |             ^~~~~~~
./samples/SAFE/__tmp_adc2eea8.c:167:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_adc2eea8.c:167:13: error: expected declaration or statement at end of input
